# syrec

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json
src/: CMakeLists.txt
src/core/syrec/: parser.cpp  program.cpp
src/core/syrec/parser/: Parser.cpp  Parser.h  Scanner.cpp  Scanner.h  SyReC.ATG  assignment_signal_access_restriction.cpp  binary_expression_signal_prohibition.cpp  custom_semantic_errors.cpp  expression_comparer.cpp  expression_evaluation_result.cpp  grammar_conflict_resolver.cpp  method_call_guess.cpp  module_call_guess.cpp  module_call_stack.cpp  operation.cpp  parser_error_message_generator.cpp  parser_utilities.cpp  range_check.cpp  signal_access_restriction.cpp  signal_evaluation_result.cpp  symbol_table.cpp  symbol_table_backup_helper.cpp  value_broadcaster.cpp
src/core/syrec/parser/antlr/: SyReC.g4  SyReC.interp  SyReC.tokens  SyReCBaseVisitor.cpp  SyReCBaseVisitor.h  SyReCCustomVisitor.cpp  SyReCCustomVisitor.h  SyReCErrorListener.cpp  SyReCErrorListener.h  SyReCLexer.cpp  SyReCLexer.h  SyReCLexer.interp  SyReCLexer.tokens  SyReCParser.cpp  SyReCParser.h  SyReCParserErrorListener.cpp  SyReCParserErrorListener.h  SyReCVisitor.cpp  SyReCVisitor.h
src/core/syrec/parser/antlr/parserComponents/: syrec_custom_base_visitor.cpp  syrec_expression_visitor.cpp  syrec_module_visitor.cpp  syrec_statement_visitor.cpp
src/core/syrec/parser/frames/: Parser.frame  Scanner.frame
src/core/syrec/parser/optimizations/: combine_redundant_instructions.cpp  dead_code_elimination.cpp  loop_optimizer.cpp  no_additional_line_assignment.cpp  operation_strength_reduction.cpp  optimizer.cpp  reassociate_expression.cpp
src/core/syrec/parser/optimizations/constantPropagation/: bit_range_access_restriction.cpp  dimension_propagation_blocker.cpp  potential_value_storage.cpp  signal_value_lookup.cpp
src/core/syrec/parser/optimizations/deadStoreElimination/: dead_store_eliminator.cpp  dead_store_status_lookup.cpp  statement_iteration_helper.cpp
src/core/syrec/parser/optimizations/noAdditionalLineSynthesis/: assignment_transformer.cpp  assignment_with_none_reversible_operations_and_unique_signal_occurrences_simplifier.cpp  assignment_with_only_reversible_operations_simplifier.cpp  assignment_with_reversible_ops_and_multilevel_signal_occurrence_simplifier.cpp  assignment_without_additional_lines_simplifier.cpp  base_assignment_simplifier.cpp  expression_substitution_generator.cpp  expression_to_subassignment_splitter.cpp  expression_traversal_helper.cpp  inorder_operation_node_traversal_helper.cpp  main_additional_line_for_assignment_simplifier.cpp  post_order_expr_traversal_helper.cpp  simple_additional_line_for_assignment_reducer.cpp  (+2 more)
src/core/syrec/parser/utils/: binary_expression_simplifier.cpp  bit_helpers.cpp  copy_utils.cpp  dangerous_component_check_utils.cpp  loop_body_value_propagation_blocker.cpp  loop_range_utils.cpp  message_utils.cpp  signal_access_utils.cpp  syrec_ast_dump_utils.cpp
src/python/: bindings.cpp
test/: CMakeLists.txt
test/circuits/: alu_2.src  binary_numeric.src  bitwise_and_2.src  bitwise_or_2.src  bn_2.src  call_8.src  divide_2.src  for_32.src  gray_binary_conversion_16.src  input_repeated_2.src  input_repeated_4.src  logical_and_1.src  logical_or_1.src  modulo_2.src  multiple_statement_4.src  multiply_2.src  negate_8.src  numeric_2.src  operators_repeated_4.src  parity_4.src  parity_check_16.src  shift_4.src  simple_add_2.src  single_longstatement_4.src
test/unittests/: test_cost_aware_simulation.cpp  test_cost_aware_synthesis.cpp  test_line_aware_simulation.cpp  test_line_aware_synthesis.cpp
test/unittests/syrecComponentsTestsUtils/: test_base_syrec_circuit_comparison_test.hpp  test_case_creation_utils.hpp
test/unittests/syrecOptimizerComponentsTests/: test_combine_redundant_instructions.cpp  test_constant_propagation_optimization.cpp  test_dead_code_elimination.cpp  test_dead_store_elimination.cpp  test_multiplication_simplification.cpp  test_no_additional_line_synthesis.cpp  test_operation_strength_reduction.cpp  test_reassociate_expression_optimization.cpp  test_removal_of_unused_variables_and_modules.cpp  test_signal_value_lookup.cpp  test_signal_value_lookup.hpp
test/unittests/syrecOptimizerComponentsTests/signalValueLookupTests/: test_base_signal_value_lookup.hpp  test_signal_value_lookup.cpp  test_signal_value_lookup.hpp  test_signal_value_lookup_lift_restriction_by_assignment.cpp  test_signal_value_lookup_restriction_for_complete_signal.cpp  test_signal_value_lookup_restriction_for_global_bitrange.cpp  test_signal_value_lookup_restriction_for_value_of_dimension.cpp  test_signal_value_lookup_restriction_for_whole_dimension.cpp  test_signal_value_lookup_swap.cpp  test_signal_value_lookup_swap.hpp  test_signal_value_lookup_update_from_variable.cpp  test_signal_value_lookup_update_value.cpp
test/unittests/syrecOptimizerComponentsTests/testdata/: combine_redundant_instructions.json  dead_code_elimination.json  dead_store_elimination.json  multiplication_simplification.json  no_additional_line_synthesis.json  operation_strength_reduction.json  reassociate_expression_optimization.json  removal_of_unused_variables_and_modules.json  test_constant_propagation_optimization.json
test/unittests/syrecParserComponentsTests/fixtures/: syrec_parser_error_cases_fixture.cpp  syrec_parser_signal_access_restriction_error_fixture.cpp  syrec_parser_signal_access_restriction_error_fixture.hpp  syrec_parser_signal_access_restriction_fixture.cpp  syrec_parser_signal_access_restriction_fixture.hpp  syrec_parser_signal_access_restriction_success_fixture.cpp  syrec_parser_signal_access_restriction_success_fixture.hpp  syrec_parser_success_cases_fixture.cpp  syrec_range_check_fixture.cpp  syrec_signal_operand_builder.hpp  syrec_signal_operand_builder_utilities.hpp
test/unittests/syrecParserComponentsTests/testdata/: parser_error_cases.json  parser_success_cases.json
test/unittests/syrecParserComponentsTests/utils/: infix_iterator.hpp  syrec_ast_dump_utils.cpp  syrec_ast_dump_utils.hpp  syrec_ir_json_utils.cpp  syrec_ir_json_utils.hpp
(+116 files in other folders)
